--- a/themes/default.css
+++ b/themes/default.css
@@ -7,3 +7,8 @@ a                 { color: #499DFF; text-decoration: none }
 ul                { list-style-type: disc }
 em                { color: #4BFF50 }
 strong            { color: #FFAB49; font-weight: bold }
+
+@media all and (max-device-width: 480px) {
+  body  { background: #303030 }
+  h1    { line-height: 1em; margin-bottom: 0.2em !important}
+}
